# Codex-Island

./: .gitignore  Makefile  README.en.md  README.md  README.zh-CN.md  project.yml
.github/: release.yml
.github/workflows/: pr-checks.yml  release.yml
CodexIsland.xcodeproj/: project.pbxproj
CodexIsland/App/: AppDelegate.swift  main.swift
CodexIsland/Assets.xcassets/FurinaPetSpritesheet.dataset/: Contents.json
CodexIsland/Assets.xcassets/StatusBarIcon.imageset/: Contents.json
CodexIsland/Core/: AppRelauncher.swift  AppSettingsStore.swift  AppUpdateManager.swift  AwaitNotificationCoordinator.swift  CodexActivation.swift  CustomPetCatalog.swift  EventBus.swift  GlobalTokenUsageSnapshot.swift  PetEvolutionStore.swift  SessionState.swift  TokenFormatter.swift  TokenStore.swift
CodexIsland/DataLayer/: SidecarBridge.swift
CodexIsland/UI/Components/: ActivateCodexButton.swift  AnimatedTokenCounter.swift  (+11 more)
CodexIslandTests/: CustomPetCatalogTests.swift  DesktopPetBehaviorTests.swift  PetEvolutionTests.swift
codex-watcher/: Cargo.toml
codex-watcher/src/: main.rs  token_usage.rs
codex-watcher/src/ipc/: unix_socket.rs
codex-watcher/src/parser/: global_token_usage.rs  mod.rs  state_parser.rs  token_parser.rs
codex-watcher/src/watcher/: jsonl_watcher.rs  mod.rs  ws_client.rs
docs/: 01-SETUP.md  02-DATA-WATCHER.md  03-TOKEN-PARSER.md  04-STATE-MACHINE.md  05-NOTCH-WINDOW.md  06-PIXEL-PET.md  07-TOKEN-DISPLAY.md  08-AWAITING-UI.md  09-INTEGRATION.md  Codex-Inland.md  demand.md
scripts/: app_runtime_smoke_test.py  ipc_smoke_test.py  package_macos_release.sh
(+15 files in other folders)
