[package]
name = "codex-watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codex-watcher"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Filesystem watching
notify = { version = "6", features = ["serde"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["connect"] }
futures-util = "0.3"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unix socket framing
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
strip = true
